# preshot

./: Cargo.toml  README.md
.github/workflows/: publish-binaries.yml
src/: main.rs  options.rs
tests/: cli.rs
