[package]
name = "blitz"
version = "1.0.0"
edition = "2021"
description = "Discover Meilisearch API key values to automatize deployments"
readme = "README.md"
license = "WTFPL"
repository = "https://github.com/gmourier/blitz"
keywords = ["meilisearch", "cli", "automation", "continous-deployment"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.2"
hmac = "0.12.1"
base64 = "0.13.0"
prettytable-rs = "^0.8"
clap = { version = "3.2.8", features = ["derive"] }
features = "0.10.0"
derive = "1.0.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
