[package]
name = "preshot"
version = "1.0.1"
edition = "2021"
description = "A simple command set to accompany a deterministic use of Meilisearch API keys."
readme = "README.md"
license = "WTFPL"
repository = "https://github.com/gmourier/preshot"
keywords = ["meilisearch", "cli", "automation", "continous-deployment"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.2"
hmac = "0.12.1"
prettytable-rs = "^0.8"
clap = { version = "3.2.8", features = ["derive"] }
features = "0.10.0"
derive = "1.0.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4", # Lets you generate random UUIDs
]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"